  mosaic3d(), borrowing code from vcd::strucplot.
o Added initial handling for zero cells in the table to mosaic3d().  
o Added center3d() for finding the mean coordinates of shape3d objects.
o Added demo(mosaic-hec) comparing 2D and 3D mosaics for HairEyeColor data
o Gave mosaic3d a label_edge argument, allowing labels for dimensions at minima or maxima

Version 0.4-3 (2010-03-25)

o Added demo(mosaic3d-demo), a proof-of-concept for doing 3D mosaic displays
o Added mosaic3d(), an initial basic version.
o Factored out split3d() and gave it S3 methods

Version 0.4-2 (2010-03-09)

o Revised vignette("vcd-tutorial"): added some hints for mosaic(), corrected stuff regarding prior
  limitations of mosaic.glm()
o Added demo(Wong3-1): three-way table, with models of conditional association
o Added Suggest: effects for effects plots of glm(), multinom() and polr() models
o Added demo(housing): visualize models fit in example(housing, package="MASS") using mosaic() and
  effect plots.
o Updated demo(Wong2-3): added model comparison plots, glmlist processing
o Added Suggest: VGAM
o Extended package description in vcdExtra-package.Rd
o Added glmlist() to facilitate processing, extraction, plotting, etc. of a collection of glm() models
o Added loglmlist(), for collections of loglm() objects
o Added summarize methods for glm, glmlist, loglm and loglmlist objects

Version 0.4-1 (2010-02-21)

o Added example(Caesar), illustrating structural zeros
o Re-named Heckman variables to e1971, ..., e1968 (errors from loglm); began example(Heckman)
o Added example(Detergent), example(Dyke)
o Fixed bug with mosaic.glm when data in global environment (Heather Turner)
o Added sieve.glm and assoc.glm methods (MF)
o Added modFit.glm and modFit.loglm
o Added demo(Wong2-3)

Version 0.4-0 (2010-02-23)

o Added new datasets: data/{Abortion, Bartlett, Caesar, Cancer, Detergent, Dyke, Gilby, Heart, Heckman, Hoyt, Mobility} 
  from mosdata.sas via md2r.sas converter.